<resources>
    <string name="app_name">TP2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TP2</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_internet">Statut Internet</string>
    <string name="menu_about">A propos</string>
    <string name="menu_abacus">Abacus</string>


    <string name="menu_tools">Tools</string>
    <string name="menu_form">Formulaire</string>
    <string name="menu_profil">Mon profil</string>
    <string name="menu_user_gestion">Gestion utilisateur</string>
    <string name="internet_status">Statut internet</string>
    <string name="Indicateur">INDICATEUR</string>
    <string name="value">Valeur:</string>
    <string name="_1">1</string>
    <string name="_9">9</string>
    <string name="_2">2</string>
    <string name="_12">12</string>
    <string name="_0">0</string>
    <string name="_108">108</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="birthday">Date de naissance:</string>
    <string name="sexe">Sexe:</string>
    <string name="men">Masculin</string>
    <string name="female">Féminin</string>
    <string name="program">Programme:</string>
    <string name="submit">Soumettre</string>
    <string name="description">Description</string>
    <string name="description_activity">Description Activity</string>
</resources>
