<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:layout_marginTop="48dp"
                android:background="@color/colorSpiner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/labelFirstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/firstName"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textFirstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="132dp"
                    android:layout_marginLeft="132dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/labelFirstname"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelLastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/lastName"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelFirstname" />

                <TextView
                    android:id="@+id/textlastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="152dp"
                    android:layout_marginLeft="152dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/labelLastname"
                    app:layout_constraintTop_toBottomOf="@+id/textFirstname" />

                <TextView
                    android:id="@+id/labelbirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/birthday"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelLastname" />

                <TextView
                    android:id="@+id/textBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginLeft="64dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/labelbirthday"
                    app:layout_constraintTop_toBottomOf="@+id/textlastname" />

                <TextView
                    android:id="@+id/labelSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/sexe"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelbirthday" />

                <TextView
                    android:id="@+id/textSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="148dp"
                    android:layout_marginLeft="148dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/labelSex"
                    app:layout_constraintTop_toBottomOf="@+id/textBirthday" />

                <TextView
                    android:id="@+id/labelProgram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/program"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelSex" />


                <TextView
                    android:id="@+id/textProgram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="104dp"
                    android:layout_marginLeft="104dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/labelProgram"
                    app:layout_constraintTop_toBottomOf="@+id/textSex" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/labelDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="56dp"
                android:text="@string/description"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>